--- a/app/shell/index.html
+++ b/app/shell/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="text/javascript" src="/assets/js/hterm_all.js"></script>
+        <script type="text/javascript" src="/js/hterm_all.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>        
     </head>
     <body style="height:800px;">
