--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,10 @@
     <script>
       window.fbAsyncInit = function() {
         FB.init({
-          appId      : '{your-app-id}',
+          appId      : '1666633256716208',
           cookie     : true,
           xfbml      : true,
-          version    : '{latest-api-version}'
+          version    : 'v2.12'
         });
 
         FB.AppEvents.logPageView();   
