Add button to login to facebook

--- a/app/index.html
+++ b/app/index.html
@@ -23,5 +23,5 @@
        }(document, 'script', 'facebook-jssdk'));
     </script>
   </body>
-  GUARAPUVU
+  <button onclick="FB.login()">Logar com o feice</button>
 </html>
