Add V A P O R W A V E style to main page

--- a/app/index.html
+++ b/app/index.html
@@ -1,27 +1,11 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="/assets/css/index.css">
+  </head>
   <body>
-    <script>
-      window.fbAsyncInit = function() {
-        FB.init({
-          appId      : '1666633256716208',
-          cookie     : true,
-          xfbml      : true,
-          version    : 'v2.12'
-        });
-
-        FB.AppEvents.logPageView();   
-
-      };
-
-      (function(d, s, id){
-         var js, fjs = d.getElementsByTagName(s)[0];
-         if (d.getElementById(id)) {return;}
-         js = d.createElement(s); js.id = id;
-         js.src = "https://connect.facebook.net/en_US/sdk.js";
-         fjs.parentNode.insertBefore(js, fjs);
-       }(document, 'script', 'facebook-jssdk'));
-    </script>
+    <p>ｈｅｎｋｅ＇ｓ　ｗｅｂｕ－ｓａｉｔｕ</p>
+    <img src="/assets/img/floral_shoppe.png" alt="Floral Shoppe" class="floral-shoppe">
+    <p>ｃｏｍｉｎｇ　ｓｏｏｎ　ノ岡せ</p>
   </body>
-  <button onclick="FB.login()">Logar com o feice</button>
 </html>
