Add song and favicon

--- a/app/index.html
+++ b/app/index.html
@@ -2,10 +2,18 @@
 <html>
   <head>
     <link rel="stylesheet" href="/assets/css/index.css">
+    <link rel="shortcut icon" type="image/png" href="/assets/img/windows_95.png"/>
   </head>
   <body>
+    <audio autoplay loop volume="0.2">
+        <source src="/assets/audio/MACINTOSH PLUS - リサフランク420 _ 現代のコンピュー.mp3" type="audio/mpeg">
+        Ｙｏｕｒ　ｂｒｏｗｓｅｒ　ｄｏｅｓ　ｎｏｔ　ｓｕｐｐｏｒｔ　ｔｈｅ　ａｕｄｉｏ　ｅｌｅｍｅｎｔ．ふ　た唄ポ園　け-　ヒ　
+    </audio>
     <p>ｈｅｎｋｅ＇ｓ　ｗｅｂｕ－ｓａｉｔｕ</p>
     <img src="/assets/img/floral_shoppe.png" alt="Floral Shoppe" class="floral-shoppe">
     <p>ｃｏｍｉｎｇ　ｓｏｏｎ　ノ岡せ</p>
   </body>
+  <script>
+    document.getElementsByTagName("audio")[0].volume = 0.15;
+  </script>
 </html>
