--- a/app/index.html
+++ b/app/index.html
@@ -5,13 +5,13 @@
     <link rel="shortcut icon" type="image/png" href="/assets/img/windows_95.png"/>
   </head>
   <body>
-    <audio autoplay loop volume="0.2">
-        <source src="/assets/audio/MACINTOSH PLUS - リサフランク420 _ 現代のコンピュー.mp3" type="audio/mpeg">
+    <audio autoplay loop>
+        <source src="/assets/audio/MACINTOSH PLUS.mp3" type="audio/mpeg">
         Ｙｏｕｒ　ｂｒｏｗｓｅｒ　ｄｏｅｓ　ｎｏｔ　ｓｕｐｐｏｒｔ　ｔｈｅ　ａｕｄｉｏ　ｅｌｅｍｅｎｔ．ふ　た唄ポ園　け-　ヒ　
     </audio>
     <p>ｈｅｎｋｅ＇ｓ　ｗｅｂｕ－ｓａｉｔｕ</p>
     <img src="/assets/img/floral_shoppe.png" alt="Floral Shoppe" class="floral-shoppe">
-    <p>ｃｏｍｉｎｇ　ｓｏｏｎ　ノ岡せ</p>
+    <marquee class="coming-soon">ｃｏｍｉｎｇ　ｓｏｏｎ　ノ岡せ</marquee>
   </body>
   <script>
     document.getElementsByTagName("audio")[0].volume = 0.15;
