deploy: dab761e5887a620cef9f770f3f7008acb188986f

--- a/about/index.html
+++ b/about/index.html
@@ -6,10 +6,10 @@
 <meta name=description content="About">
 <meta name=keywords content>
 <meta name=robots content="noodp">
-<link rel=canonical href=/about/>
-<link rel=stylesheet href=/assets/style.css>
-<link rel=apple-touch-icon href=/img/apple-touch-icon-192x192.png>
-<link rel="shortcut icon" href=/img/favicon/orange.png>
+<link rel=canonical href=https://eduhenke.github.io/eduardohenke.com/about/>
+<link rel=stylesheet href=https://eduhenke.github.io/eduardohenke.com/assets/style.css>
+<link rel=apple-touch-icon href=https://eduhenke.github.io/eduardohenke.com/img/apple-touch-icon-192x192.png>
+<link rel="shortcut icon" href=https://eduhenke.github.io/eduardohenke.com/img/favicon/orange.png>
 <meta name=twitter:card content="summary">
 <meta name=twitter:site content>
 <meta name=twitter:creator content>
@@ -17,9 +17,9 @@
 <meta property="og:type" content="article">
 <meta property="og:title" content="About">
 <meta property="og:description" content="About">
-<meta property="og:url" content="/about/">
+<meta property="og:url" content="https://eduhenke.github.io/eduardohenke.com/about/">
 <meta property="og:site_name" content="Henke">
-<meta property="og:image" content="/img/favicon/orange.png">
+<meta property="og:image" content="https://eduhenke.github.io/eduardohenke.com/img/favicon/orange.png">
 <meta property="og:image:width" content="2048">
 <meta property="og:image:height" content="1024">
 </head>
@@ -39,7 +39,7 @@ Eduardo Henke
 <div class=content>
 <div class=post>
 <h1 class=post-title>
-<a href=/about/>About</a></h1>
+<a href=https://eduhenke.github.io/eduardohenke.com/about/>About</a></h1>
 <div class=post-meta>
 </div>
 <div class=post-content><div>
@@ -55,8 +55,8 @@ Eduardo Henke
 </div>
 </div>
 </footer>
-<script src=/assets/main.js></script>
-<script src=/assets/prism.js></script>
+<script src=https://eduhenke.github.io/eduardohenke.com/assets/main.js></script>
+<script src=https://eduhenke.github.io/eduardohenke.com/assets/prism.js></script>
 </div>
 </body>
 </html>
