--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <meta name=description content="Personal website for Eduardo Henke">
 <meta name=keywords content>
 <meta name=robots content="noodp">
-<link rel=canonical href=/>
-<link rel=stylesheet href=/assets/style.css>
-<link rel=apple-touch-icon href=/img/apple-touch-icon-192x192.png>
-<link rel="shortcut icon" href=/img/favicon/orange.png>
+<link rel=canonical href=https://eduhenke.github.io/eduardohenke.com/>
+<link rel=stylesheet href=https://eduhenke.github.io/eduardohenke.com/assets/style.css>
+<link rel=apple-touch-icon href=https://eduhenke.github.io/eduardohenke.com/img/apple-touch-icon-192x192.png>
+<link rel="shortcut icon" href=https://eduhenke.github.io/eduardohenke.com/img/favicon/orange.png>
 <meta name=twitter:card content="summary">
 <meta name=twitter:site content>
 <meta name=twitter:creator content>
@@ -18,12 +18,12 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="Henke">
 <meta property="og:description" content="Personal website for Eduardo Henke">
-<meta property="og:url" content="/">
+<meta property="og:url" content="https://eduhenke.github.io/eduardohenke.com/">
 <meta property="og:site_name" content="Henke">
-<meta property="og:image" content="/img/favicon/orange.png">
+<meta property="og:image" content="https://eduhenke.github.io/eduardohenke.com/img/favicon/orange.png">
 <meta property="og:image:width" content="2048">
 <meta property="og:image:height" content="1024">
-<link href=/index.xml rel=alternate type=application/rss+xml title=Henke>
+<link href=/eduardohenke.com/index.xml rel=alternate type=application/rss+xml title=Henke>
 </head>
 <body class=orange>
 <div class="container center headings--one-size">
@@ -81,8 +81,8 @@ My research interests reside in the following topics:</p>
 </div>
 </div>
 </footer>
-<script src=/assets/main.js></script>
-<script src=/assets/prism.js></script>
+<script src=https://eduhenke.github.io/eduardohenke.com/assets/main.js></script>
+<script src=https://eduhenke.github.io/eduardohenke.com/assets/prism.js></script>
 </div>
 </body>
 </html>
