--- a/404.html
+++ b/404.html
@@ -6,10 +6,10 @@
 <meta name=description content>
 <meta name=keywords content>
 <meta name=robots content="noodp">
-<link rel=canonical href=https://eduhenke.github.io/eduardohenke.com/404.html>
-<link rel=stylesheet href=https://eduhenke.github.io/eduardohenke.com/assets/style.css>
-<link rel=apple-touch-icon href=https://eduhenke.github.io/eduardohenke.com/img/apple-touch-icon-192x192.png>
-<link rel="shortcut icon" href=https://eduhenke.github.io/eduardohenke.com/img/favicon/orange.png>
+<link rel=canonical href=https://eduardohenke.com/404.html>
+<link rel=stylesheet href=https://eduardohenke.com/assets/style.css>
+<link rel=apple-touch-icon href=https://eduardohenke.com/img/apple-touch-icon-192x192.png>
+<link rel="shortcut icon" href=https://eduardohenke.com/img/favicon/orange.png>
 <meta name=twitter:card content="summary">
 <meta name=twitter:site content>
 <meta name=twitter:creator content>
@@ -17,9 +17,9 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="404 Page not found">
 <meta property="og:description" content>
-<meta property="og:url" content="https://eduhenke.github.io/eduardohenke.com/404.html">
+<meta property="og:url" content="https://eduardohenke.com/404.html">
 <meta property="og:site_name" content="Henke">
-<meta property="og:image" content="https://eduhenke.github.io/eduardohenke.com/img/favicon/orange.png">
+<meta property="og:image" content="https://eduardohenke.com/img/favicon/orange.png">
 <meta property="og:image:width" content="2048">
 <meta property="og:image:height" content="1024">
 </head>
@@ -40,7 +40,7 @@ Eduardo Henke
 <div class=post>
 <h1 class=post-title>404 — Page not found...</h1>
 <div class=post-content>
-<a href=https://eduhenke.github.io/>Back to home page&nbsp;→</a>
+<a href=https://eduardohenke.com/>Back to home page&nbsp;→</a>
 </div>
 </div>
 </div>
@@ -52,8 +52,8 @@ Eduardo Henke
 </div>
 </div>
 </footer>
-<script src=https://eduhenke.github.io/eduardohenke.com/assets/main.js></script>
-<script src=https://eduhenke.github.io/eduardohenke.com/assets/prism.js></script>
+<script src=https://eduardohenke.com/assets/main.js></script>
+<script src=https://eduardohenke.com/assets/prism.js></script>
 </div>
 </body>
 </html>
